add authorization to swagger
