# api/src/controllers/auth.go
@@ -81,3 +81,52 @@ func (controller *AuthController) SignIn(c *gin.Context) {
 	}
 	c.JSON(http.StatusOK, jwtOutput)
 }
+
+// RefreshToken godoc
+// @Tags auth
+// @Summary Refresh auth token
+// @Description Refresh auth token
+// @Accept  json
+// @Produce  json
+// @Param message body models.User true "User Info"
+// @Success 200 {object} models.Recipe
+// @Header 200 {string} Token "qwerty"
+// @Failure 400,404 {object} httputil.HTTPError
+// @Failure 500 {object} httputil.HTTPError
+// @Router /refresh-token [get]
+func (controller *AuthController) RefreshToken(c *gin.Context) {
+	tokenValue := c.GetHeader("Authorization")
+	claims := &models.Claims{}
+	tkn, err := jwt.ParseWithClaims(tokenValue, claims, func(token *jwt.Token) (interface{}, error) {
+		return []byte(os.Getenv("JWT_SECRET")), nil
+	})
+	if err != nil {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
+		return
+	}
+	if !tkn.Valid {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid token"})
+		return
+	}
+
+	if time.Until(time.Unix(claims.ExpiresAt, 0)) > 30*time.Second {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Token is not expired yet"})
+		return
+	}
+
+	log.Info("Refresh token")
+	expirationTime := time.Now().Add(5 * time.Minute)
+	claims.ExpiresAt = expirationTime.Unix()
+	token := jwt.NewWithClaims(jwt.SigningMethodHS256, claims)
+	tokenString, err := token.SignedString(os.Getenv("JWT_SECRET"))
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	jwtOutput := models.JWTOutput{
+		Token:   tokenString,
+		Expires: expirationTime,
+	}
+	c.JSON(http.StatusOK, jwtOutput)
+}
